# api/controllers/refinement.controller.js
@@ -9,3 +9,11 @@ module.exports.postSortedRefinement = async (req, res) => {
   var products = await Product.find(req.body).sort({date: -1});
   res.json(products);
 };
+
+module.exports.postSearchRefinement = async (req, res) => {
+  let matchedList = await Product.find(
+    req.body,
+    { score: { $meta: "textScore" } }
+  ).sort({ score: { $meta: "textScore" }});
+  res.json(matchedList);
+};
